syntax = "proto3";
package sensor_data;

enum SensorType {
    LIDAR2D = 0;
    ODOMETER = 1;
    IMU = 2;
    GPS = 3;
    CAMERA2D = 4;
}

message Header {
    uint32 sensor_id = 1; // use range [0, 255]
    SensorType sensor_type = 2;
    string name = 3;
    uint64 timestamp = 4;
}

// LIDAR
message LidarScan2D {
    repeated double ranges = 1; // distance in meters
    double angle_min = 2; // in radians
    double angle_increment = 3; // in radians
    double max_range = 4; // in meters
}

message SensorData {
    Header header = 1;
    // oneof: "this message can contain one and only one of these fields at a time"
    oneof data {
        LidarScan2D lidar_scan_2d = 2;
    }
}
